--- a/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                     <li><a href="#">Remolque</a></li>
                                 </ul>
                             </li>
-                            <li class="btn-cta"><a href="#"><span>Reserva tu vehiculo</span></a></li>
+                            <li class="btn-cta"><a href="@Url.Action("ReservaVehiculo","Home")"><span>Reserva tu vehiculo</span></a></li>
                             @Html.Partial("_LoginPartial")
                         </ul>
                         
