--- a/RentaCar/RentaCar/Views/Account/Register.cshtml
+++ b/RentaCar/RentaCar/Views/Account/Register.cshtml
@@ -2,63 +2,64 @@
 @{
     ViewBag.Title = "Registrarse";
 }
+<div class="gtco-container">
+    <h2 style="padding-top:100px;"></h2>
+    <div class="col-md-3 hidden-xs">
 
-<h2 style="padding-top:100px;"></h2>
-<div class="col-md-3 hidden-xs">
-   
-    <img src="~/Imagenes/auto_registro.jpg" class="img-responsive" />
-</div>
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    <div class="gtco-container col-md-9">
-        @Html.AntiForgeryToken()
-        <h4>Identificate con nosotros para reservar tu vehiculo.</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(m => m.Telefono, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Telefono, new { @class = "form-control", @placeholder = "Ej : +56965342765" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Nombre, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Apellido, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Apellido, new { @class = "form-control"})
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-primary" value="Registrarse" />
-            </div>
-        </div>
+        <img src="~/Imagenes/auto_registro.jpg" class="img-responsive" />
     </div>
-   
-}
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        <div class="gtco-container col-md-9">
+            @Html.AntiForgeryToken()
+            <h4>Identificate con nosotros para reservar tu vehiculo.</h4>
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(m => m.Telefono, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Telefono, new { @class = "form-control", @placeholder = "Ej : +56965342765" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Nombre, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Apellido, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Apellido, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn btn-primary" value="Registrarse" />
+                </div>
+            </div>
+        </div>
+
+    }
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
